Create banner for desktop & mob

--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
   <title>Keswick Camera Club</title>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet"> 
 
 </head>
 
 <body>
+
+    <header>
+        <div class="banner">
+            <div class="banner-text">
+                <h1>Keswick Camera Club</h1>
+                <a href="#">&#9776; Menu</a>
+            </div>
+        </div>
+    </header>
+
+    
 
 
 
