Add pics to images folder

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
 
 </head>
 
@@ -20,7 +22,10 @@
         </div>
     </header>
 
-    
+    <main>        
+        <p>Welcome to Keswick Camera Club. We aim to provide members the chance to improve their photography through regular workshops, competitions and presentations by photographers at the top of their game.</p>
+        <p>Winning pictures from the club’s competitions are there to inspire you. Each monthly competition is open to any subject, so there is plenty of variety to enjoy. </p>
+    </main>
 
 
 
