Add aside panel and dog pic

--- a/index.html
+++ b/index.html
@@ -22,10 +22,24 @@
         </div>
     </header>
 
-    <main>        
-        <p>Welcome to Keswick Camera Club. We aim to provide members the chance to improve their photography through regular workshops, competitions and presentations by photographers at the top of their game.</p>
-        <p>Winning pictures from the club’s competitions are there to inspire you. Each monthly competition is open to any subject, so there is plenty of variety to enjoy. </p>
+    <main>
+    
+        <section>
+            <h2>Welcome</h2>        
+            <p>Hello and welcome to Keswick Camera Club. We aim to provide members the chance to improve their photography through regular workshops, competitions and presentations by photographers at the top of their game.</p>
+            <p>Winning pictures from the club’s competitions are there to inspire you. Each monthly competition is open to any subject, so there is plenty of variety to enjoy. </p>
+        </section>
+
+        <aside>
+            <h4>Next meeting: May 4</h4>
+            <img src="./images/dog.jpg" alt="happy dog on a shingle beach">
+            <p>Guest speaker Kerry-Anne Standford will be sharing her award-winning expertise on pet photography. Join us from 7.30pm at Meeting Suite 3 at the Theatre by the Lake, Lakeside, Keswick, CA12 5DJ.</p>
+        </aside>
+
     </main>
+
+
+    
 
 
 
