Add second aside and ladybird pic

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
         <aside>
             <h4>Next meeting: May 4</h4>
             <img src="./images/dog.jpg" alt="happy dog on a shingle beach">
-            <p>Guest speaker Kerry-Anne Standford will be sharing her award-winning expertise on pet photography. Join us from 7.30pm at Meeting Suite 3 at the Theatre by the Lake, Lakeside, Keswick, CA12 5DJ.</p>
+            <p>Guest speaker <a href="#">Kerry-Anne Standford</a> will be sharing her award-winning expertise on pet photography. Join us from 7.30pm at Meeting Suite 3 at the Theatre by the Lake, Lakeside, Keswick, CA12 5DJ.</p>
+            <hr>
+            <h4>Competition</h4>
+            <img src="./images/ladybird.jpg" alt="macro view of a ladybird covered in dew on a leaf">
+            <p>We're going macro in May! We're challenging you to look at a bug's life this month. Full details <a href="#">here</a>.</p>
         </aside>
 
     </main>
