--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </main>
 
     <footer>
-        
+        <p>Copyright Keswick Camera Club 2021 &nbsp;|&nbsp; Design by Rob Sutton.com 
     </footer>
 
 
