Start nav styling

--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
                 <a href="#">&#9776; Menu</a>
             </div>
         </div>
+
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Programme 21/22</a></li>
+                <li><a href="#">Competitions</a></li>
+                <li><a href="#">Galleries</a></li>
+                <li><a href="#">Members' Area</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -47,7 +58,7 @@
     </main>
 
     <footer>
-        <p>Copyright Keswick Camera Club 2021 &nbsp;|&nbsp; Design by Rob Sutton.com 
+        <p>Copyright Keswick Camera Club 2021 &nbsp;|&nbsp; Design by Rob Sutton
     </footer>
 
 
